# decovar

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  localise_alleles.hpp  main.cpp  misc.hpp  remove_rare_alleles.hpp
src/: generator.hpp  main.cpp  misc.hpp
src/allele/: allele.cpp  allele.hpp  localise.hpp  remove.hpp  remove_rare.hpp  split.hpp
src/binalleles/: binalleles.cpp  binalleles.hpp
